2012-04-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* autom4te.cache:
	* Source/config.h.in:
	* configure:
	* configure.ac: Add configure.
	* Source/GSPrivate.h: Use results of configure.
	* Source/GNUmakefile: Move from here...
	* Source/GNUmakefile.in: ...to here and use results of configure.

2012-04-16 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Initialize CFURLAccess string constants.
	* Source/CFURLAccess.c: Completed file scheme implementation.
	* Tests/CFURLAccess/basic.m: Added tests.

2012-04-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CoreFoundation.h: Added CFURLAccess.h
	* Source/CFURL.c: Implement file system representation functions.
	* Source/CFURLAccess.c: Implemented file/directory operations.
	* Tests/CFURLAccess:
	* Tests/CFURLAccess/TestInfo:
	* Tests/CFURLAccess/basic.m: Add basic CFURLAccess tests.
	* Tests/CFArray/create.m: Addition CFArray test.
	* Source/CFRuntime.c: Initialize CFBinaryHeap.

2012-04-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFBinaryHeap.h:
	* Source/CFBinaryHeap.c: Implemented CFBinaryHeap.
	* Tests/CFBinaryHeap: Added tests.

2012-04-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFURLAccess.h:
	* Source/CFURLAccess.c:
	* Source/common.mk: Add CFURLAccess skeleton.

2012-04-12 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFStringFormat.c:
	* Source/GSPrivate.h: Use ASCII characters directly instead of their 
	numberical value.

2012-04-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Fix bug in CFURL string percent unescaping.
	* Tests/CFURL/escaping.m: Added more tests.

2012-04-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.c: Fix bug in CFArrayGetFirstIndexOfValue().
	* Tests/CFArray/create.m:
	* Tests/CFArray/mutablearray.m: Add tests.

2012-04-10 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Add code to search transition times.